--- a/libs/jade/dev/post-tool-3/post-tool-5.jade
+++ b/libs/jade/dev/post-tool-3/post-tool-5.jade
@@ -16,8 +16,7 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			h2 Your emails have been sent
-
-			p You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
-
-			p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door straight away. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
+			h2 We’ve sent the emails for you
+			p Keep an eye on your inbox over the next few days for email confirmations.
+			p Once you’ve followed the steps in the emails, you’ll start to see less junk mail in about a month.
+			p You’ll get an email with a PDF that you can send to your local electoral office -  you should send it to them right away.
