--- a/libs/jade/dev/post-tool-3/post-tool.jade
+++ b/libs/jade/dev/post-tool-3/post-tool.jade
@@ -16,16 +16,15 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			p Use this tool to easily contact up to 4 organisations that will help to reduce the amount of junk mail you get through the post.
-			p This tool will:
+			p Use this tool to reduce the amount of junk mail you get through the post.
+			p The tool will:
 			ul
 				li send emails on your behalf to organisations that can reduce your junk mail
-				li give you letters to download and send organisations that can reduce your junk mail
+				li email you a letter to send to your electoral office - this will remove you from a list that gets used for junk mail
+			p You’ll still get mail from organisations that you’ve asked to send you post. But you’ll get less post that you haven’t asked for, eg from local political parties and businesses.
 
 			.callout
-				p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door - for example takeaway menus
+				p You should put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that gets delivered door-to-door - for example takeaway menus.
 				p You can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
-
-			p You’ll still get mail from organisations that you’ve asked to send you marketing material, for example charities or businesses.
 
 			a.btn.right-button-icon(href="post-tool-2.html") Start
