--- a/libs/jade/dev/post-tool-4/post-tool-3.jade
+++ b/libs/jade/dev/post-tool-4/post-tool-3.jade
@@ -24,9 +24,9 @@ block content
 				br
 				| Townname
 				br
-				| A1 1AA
+				| A1A1 A1A
 				br
-				| email@addres.com
+				| email@address.com
 
 			a.btn-light.left-button-icon(href="post-tool-2.html") Edit details
 			a.btn.right-button-icon(href="post-tool-4.html") Confirm
