--- a/libs/jade/dev/post-tool-4/post-tool-4.jade
+++ b/libs/jade/dev/post-tool-4/post-tool-4.jade
@@ -35,32 +35,35 @@ block script
 block content
 	.articleContent
 		div
-			h2 Send emails or download your letter
-			p We recommend sending to all organisations below to remove as much junk mail as possible from your post.
+			h2 Choose who you want to contact
+			p An email will be sent on your behalf to the following organisations that can reduce your junk mail. It’s best to contact all of them.
+			p You’ll still get mail from organisations that you’ve asked to send you post. But you’ll get less post that you haven’t asked for, eg from local political parties and businesses.
 
 			.well
 				h3 Email Royal Mail 'Door to Door'
 				p Charities, businesses and other organisations often pay Royal Mail to deliver marketing post for them. Tick this box to send an email to Royal Mail saying that you don't want this marketing post.
-				p They’ll send you a form to fill in.
-				button.btn-secondary.email-button-icon Send email
+				p They’ll send you a form to fill in. Once you’ve sent it to them you should notice a difference in 6 weeks.
+				p
+					button.btn-secondary.email-button-icon Send email
 
 			.well
 				h3 Email the ‘Your Choice’ scheme
 				p The ‘Your Choice’ scheme allows you to get less marketing mail from various organisations, including government, political parties, charities, and businesses. You’ll still get any post that’s directly addressed to you.
-				p They’ll send you a form to fill in.
-				button.btn-secondary.email-button-icon Send email
+				p They’ll send you a form to fill in. Once you’ve sent it to them you should notice a difference within 12 weeks.
+				p
+					button.btn-secondary.email-button-icon Send email
 
 			.well
 				h3 Email the Mailing Preference Service
 				p The Mailing Preference Service keep a list of people who don’t want to get marketing post. Businesses that check this list will stop sending you mail. You’ll receive a confirmation email.
-				button.btn-secondary.email-button-icon Send email
+				p They’ll send you a form to fill in. Once you’ve sent it to them you should notice a difference in about a month.
+				p
+					button.btn-secondary.email-button-icon Send email
 
 			.well
-				h3 Write to your electoral registration office
+				h3 Contact your electoral registration office
 				p Your local electoral registration office keeps a list of addresses called the ‘open register’. This list can be bought and used it to send junk mail. It won’t affect your right to vote.
-				button.btn-secondary.email-button-icon Send letter to myself
-
-			.callout
-				p You’ll start to see a difference in the amount of junk mail you receive within the next 4 weeks.
-
-				p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door straight away. You also can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
+				p We’ll email you a pdf. You should send this to your local electoral office - the address will be on the pdf.
+				p You’ll see a difference in the amount of junk mail you get in about a month.
+				p
+					button.btn-secondary.email-button-icon Send email
