--- a/libs/jade/dev/post-tool-4/post-tool.jade
+++ b/libs/jade/dev/post-tool-4/post-tool.jade
@@ -16,22 +16,15 @@ block breadcrumbs
 block content
 	.articleContent
 		div
-			p Use this tool to easily contact up to 4 organisations that will help to reduce the amount of junk mail you get through the post.
-			p This tool will allow you to email:
+			p Use this tool to reduce the amount of junk mail you get through the post.
+			p The tool will:
 			ul
-				li Royal Mail Door to Door
-				li Mailing Preference Service
-				li Direct Marketing Association’s ‘Your Choice’ scheme
-
-			p It will also give you a letter to download and send to organisations that can reduce your junk mail
-			ul
-				li Your local electoral registration office
-
-			p You’ll still get mail from organisations that you’ve asked to send you marketing material, for example charities or businesses.
+				li send emails on your behalf to organisations that can reduce your junk mail
+				li email you a letter to send to your electoral office - this will remove you from a list that gets used for junk mail
+			p You’ll still get mail from organisations that you’ve asked to send you post. But you’ll get less post that you haven’t asked for, eg from local political parties and businesses.
 
 			.callout
-				h3 Additional things you can do
-				p Put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that's delivered door-to-door - for example takeaway menus
+				p You should put a ‘no junk mail’ sign on your door or letterbox to help stop junk mail that gets delivered door-to-door - for example takeaway menus.
 				p You can order stickers online from the #[a.a-external(href="#") Stop Junk Mail Campaign].
 
 			a.btn.right-button-icon(href="post-tool-2.html") Start
