Dev: initial commit index page

--- a/libs/jade/dev/site/group-reveal.jade
+++ b/libs/jade/dev/site/group-reveal.jade
@@ -36,20 +36,41 @@ block content
 						.group-index-list
 							h3 #[a(href="#") Benefit calculator]
 							p Find out what benefits and how much you could be entitled to
-						.group-index-list
-							h3 #[a(href="#") Personal Independence Payment (PIP)]
-						.group-index-list
-							h3 #[a(href="#") Employment Support Allowance (ESA)]
-						.group-index-list
-							h3 #[a(href="#") Benefits for people in work or looking for work]
-						.group-index-list
-							h3 #[a(href="#") Benefits for older people]
-						.group-index-list
-							h3 #[a(href="#") Universal Credit]
-						.group-index-list
-							h3 #[a(href="#") Children and young people]
-						.group-index-list
-							h3 #[a(href="#") Coming from abroad and claiming benefits]
+						section.revealable
+							h3  Employment Support Allowance (ESA)
+							h3 Before you claim ESA
+							p #[a(href="#") Check if youre eligible for ESA]
+							p #[a(href="#") How much ESA you can get]
+							p #[a(href="#") Help with your ESA claim]
+
+							h3 Claiming ESA (filling in the ESA1 form)
+							p #[a(href="#") Help filling in your ESA50 form]
+							p #[a(href="#") Preparing for your ESA medical assessment]
+							p #[a(href="#") Getting your ESA decision after the assessment]
+							p #[a(href="#") What to do if youre not awarded ESA]
+							p #[a(href="#") While youre getting ESA]
+
+							h3 Challenging an ESA decision
+							p #[a(href="#") Your money and benefits during an ESA reconsideration]
+							p #[a(href="#") About the ESA support group and work-related activity group]
+							p #[a(href="#") What to do if you’ve been sanctioned while on ESA]
+							p #[a(href="#") ESA: Reporting changes to the DWP]
+							p #[a(href="#") Work you can do while getting ESA]
+						section.revealable
+							h3  Benefits for people in work or looking for work
+							p #[a(href="#") ]
+						section.revealable
+							h3  Benefits for older people
+							p #[a(href="#") ]
+						section.revealable
+							h3  Universal Credit
+							p #[a(href="#") ]
+						section.revealable
+							h3  Children and young people
+							p #[a(href="#") ]
+						section.revealable
+							h3  Coming from abroad and claiming benefits
+							p #[a(href="#") ]
 	
 
 					div.col-sm-4.col-sm-12								
