--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -12,62 +12,50 @@ block breadcrumbs
 
 block content
 		.main-container
-		.home-first
-			.home__content
-				.flex-container.flex-row
-					.col-md-6.col-sm-12
-						h1 Benefits
-						p We provide free, independent, confidential and impartial advice to everyone on their rights and responsibilities. We value diversity, promote equality and challenge discrimination.
-					.col-md-6.col-sm-12.hide-mobile.home--feature
-						//.home__content-trends
-							h2 Most viewed content
-							p #[a(href="#") Employment Support Allowance ]
-							p #[a(href="#") Personal Independence Payment ]
-							p #[a(href="#") Basic rights at work ]
+		//.home-first
+		.home__content
+			.flex-container.flex-row
+				.col-md-8.col-sm-12
+					h1 Personal Independence Payment PIP
+					p Personal Independence Payment (PIP) is extra money to help you with everyday life if you’ve an illness, disability or mental health condition.
 
+					p You can get it on top of Employment and Support Allowance or other benefits. Your income, savings, and whether you’re working or not don't affect your eligibility.
 
-		.home-second
-			.home__content
-				.flex-container.flex-row
-					div.col-sm-8.col-sm-12
-						.blog-lead
-							.blog-name
-								p Browse benefits advice
-						.group-index-list
-							h3 #[a(href="#") Benefit calculator]
-							p Find out what benefits and how much you could be entitled to
-						.group-index-list
-							h3 #[a(href="#") Personal Independence Payment (PIP)]
-						.group-index-list
-							h3 #[a(href="#") Employment Support Allowance (ESA)]
-						.group-index-list
-							h3 #[a(href="#") Benefits for people in work or looking for work]
-						.group-index-list
-							h3 #[a(href="#") Benefits for older people]
-						.group-index-list
-							h3 #[a(href="#") Universal Credit]
-						.group-index-list
-							h3 #[a(href="#") Children and young people]
-						.group-index-list
-							h3 #[a(href="#") Coming from abroad and claiming benefits]
+					.group-index-list
+						h3 #[a(href="#") Benefit calculator]
+						p Find out what benefits and how much you could be entitled to
+					.group-index-list
+						h3 #[a(href="#") Personal Independence Payment (PIP)]
+					.group-index-list
+						h3 #[a(href="#") Employment Support Allowance (ESA)]
+					.group-index-list
+						h3 #[a(href="#") Benefits for people in work or looking for work]
+					.group-index-list
+						h3 #[a(href="#") Benefits for older people]
+					.group-index-list
+						h3 #[a(href="#") Universal Credit]
+					.group-index-list
+						h3 #[a(href="#") Children and young people]
+					.group-index-list
+						h3 #[a(href="#") Coming from abroad and claiming benefits]
 	
 
-					div.col-sm-4.col-sm-12								
-						.blog-sidebar--updates(style="background-color:#c2bdde; height:100%;")
-							.card-banner-top
-								p(style="color:#57486b;") Find a specific benefit
-							.card-text
-								//img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
-								//p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
-								.dropdown
-									select#exampleSelect1
-										option Attendance Allowance
-										option 2
-										option 3
-										option 4
-										option 5
+				div.col-sm-4.col-sm-12								
+					.blog-sidebar--updates(style="background-color:#c2bdde; height:100%;")
+						.card-banner-top
+							p(style="color:#57486b;") Find a specific benefit
+						.card-text
+							//img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
+							//p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
+							.dropdown
+								select#exampleSelect1
+									option Attendance Allowance
+									option 2
+									option 3
+									option 4
+									option 5
 
-								button.btn.btn-secondary.right-button-icon Search 
+							button.btn.btn-secondary.right-button-icon Search 
 
 
 						//.blog-sidebar--updates(style="background-color:#006278; height:100%;")
@@ -90,10 +78,10 @@ block content
 							p of ESA applicants were wrongly placed in mandatory consideration in 2015
 							p #[a(href="#") Read more about our research ]		
 
-						.callout--related
-							h3 If you need more help
-							p Contact the Citizens Advice consumer helpline on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone. You can also use an online form or write to them.
-							p If you’re in Northern Ireland, contact Consumerline.
+					.callout--related
+						h3 If you need more help
+						p Contact the Citizens Advice consumer helpline on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone. You can also use an online form or write to them.
+						p If you’re in Northern Ireland, contact Consumerline.
 
 	.fullwidth-yellow
 		.fullwidth-content
