--- a/libs/jade/dev/site/home.jade
+++ b/libs/jade/dev/site/home.jade
@@ -1,194 +1,12 @@
 block settings
-doctype html
-html
-	head
-		meta(content="text/html; charset=utf-8", http-equiv="Content-Type")
-		meta(charset="utf-8")
-		meta(content="IE=edge", http-equiv="X-UA-Compatible")
-		meta(name="keywords")
-		meta(name="description")
+	- var title = "Volunteering with the Citizens Advice network"
+	- var fullpage = true
+	- var dir = "../../"
+	- var newfooter = true
 
-		title Citizens Advice style guide
-			- if (typeof title !== "undefined")
-				| - #{title}
+extends /template/template-site.jade
 
-		// Mobile Specific Metas
-		meta(content="width=device-width, initial-scale=1, maximum-scale=2.0", name="viewport")
-		meta(content="48a2415d-980f-4763-a5b9-e10e000636b3", name="cab-guid")
-		meta(content="EWS", name="cab-extent")
-		meta(content="../../static/images/apple-touch-icon.png")
-		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
-
-		// Stylesheets
-		link(href="../../css/guide.css", rel="stylesheet")
-		link(href="../../images/favicon/32.png", rel="shortcut icon")
-		link(href="../../images/favicon/228.png", rel="apple-touch-icon")
-
-		// Javascript
-		script(src="../../js/vendor/jquery-1.11.3.min.js")
-		script(src="../../js/beta-dap-accordion.js")
-		script(src="../../js/collapse.js")
-		script(src="../../js/prism.js")
-		script(src="../../js/smooth.js")
-		script.
-			var filename = document.location.pathname.match(/[^\/]+$/)[0];
-			$(document).ready(function() {
-				$('.side-nav-beta a[href="' + filename + '"]').addClass('-current');
-			});
-
-		script.
-			$(document).ready(function($) {
-				$('#get-advice').click(function(){
-					$(this).toggleClass("active");
-					$('#main-nav-3--dropdown').slideToggle('fast');
-					$('#main-nav-3--dropdown-1').removeClass("active");
-				});
-			});
-		script.
-			$(document).ready(function($) {
-				$('#get-involved').click(function(){
-					$(this).toggleClass("active");
-					$('#main-nav-3--dropdown-1').slideToggle('fast');
-					$('#main-nav-3--dropdown').removeClass("active");
-				});
-			});
-
-	body
-		<!--[if IE 8]><div class="ie8"><![endif]-->
-		.skip-nav
-			a.screenreader.screenreader--focusable Skip to content
-			a.screenreader.screenreader--focusable Skip to footer
-
-		header#main-nav-1--branding
-			.content
-				ul
-					li
-						a Cymraeg
-					li
-						a Sign in
-
-		#main-nav-3--nav
-			.content
-				a.logo(href="index.html")
-					img(src="../../images/ca-logo-hz-280px.svg")
-				ul
-					li#get-advice
-						a Get Advice
-					li#get-involved
-						a Get Involved
-						
-				.search
-					.field-group.field-group--buttons
-						input(type="search", placeholder="Search")
-						div(style="display:table-cell;")
-						button.btn.btn-yellow
-							i.icon-search
-
-		#main-nav-3--dropdown(style="display:none;")
-			.content
-				ul
-					li
-						a(href="") Benefits
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Work
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Debt and money
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Consumer
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Relationship
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Housing
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Law and rights
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Discrimination
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Tax
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Healthcare
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Education
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") More from us
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-		#main-nav-3--dropdown-1(style="display:none;")
-			.content
-				ul
-					li
-						a(href="") About Citizens Advice
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Contact us
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Policy research
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Our blogs
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Campaigns
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") How Citizens Advice works
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Volunteer
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Jobs
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Press releases
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Support us
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") The difference we make
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					li
-						a(href="") Find your local Citizens Advice
-						br
-						| Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-
+block content
 		.main-container
 		.home-first
 			.home__content
@@ -242,63 +60,3 @@ html
 								input#standardField(placeholder="", type="text")
 
 							button.btn.btn-secondary.right-button-icon Search roles
-					//div.col-sm-4.col-sm-12
-						.blog-lead
-							.blog-name
-								p Volunteer opportunities
-								h3 #[a(href="#") Become a volunteer in your community ]
-							img(src="../../images/sample-blog/pip-feature-images-2.jpg" alt="Become a volunteer" style="width:100%;")
-							p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-
-		//.footer-feedback
-			h2.screenreader Feedback
-			.footer-feedback__content
-				p Is there anything wrong with this page? #[a(href="#") Let us know].
-
-		#footer.main-footer(data-track-zone="footer")
-			.footer-content.flex-row
-				.flex-column.col-xs-12.col-md-9
-					h3 Get Advice
-					.flex-row(style="padding: 0;")
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Benefits]
-								li #[a(href="#") Work]
-								li #[a(href="#") Debt and money]
-								li #[a(href="#") Consumer]
-
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Relationships]
-								li #[a(href="#") Housing]
-								li #[a(href="#") Law and rights]
-								li #[a(href="#") Discrimination]
-
-						.col-xs-12.col-sm-4
-							ul
-								li #[a(href="#") Tax]
-								li #[a(href="#") Healthcare]
-								li #[a(href="#") Education]
-								li #[a(href="#") A to Z of advice]
-
-				.flex-column.col-xs-12.col-md-3
-					h3 Information
-					ul
-						li #[a(href="#") Help]
-						li #[a(href="#") Cymraeg]
-						li #[a(href="#") Terms and conditions]
-						li #[a(href="#") Privacy and cookies]
-
-			.footer--legal
-				.footer--legal--content
-					img(alt="", src="../../images/ca_wo-logo-100px.svg")
-					p
-						| Copyright © 2016 Citizens Advice, an operating name of the National Association of Citizens Advice Bureaux.
-						br
-						| Registered charity number 279057; Registered in England 1436945; VAT number GB726020276. 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
-
-
-		<!--[if IE 8]></div><![endif]-->
-		script(src="../../js/advisor.js")
-		script(src="../../js/core.js")
-		block script-bottom
