--- a/libs/jade/dev/site/topic.jade
+++ b/libs/jade/dev/site/topic.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Benefits"
+	- var title = "Personal Independence Payment (PIP)"
 	- var fullpage = true
 	- var dir = "../../"
 
@@ -11,132 +11,54 @@ block breadcrumbs
 		{title: "Benefits"}])
 
 block content
-		.main-container
-		//.home-first
-		.home__content
-			.flex-container.flex-row
-				.col-md-8.col-sm-12
-					h1 Personal Independence Payment PIP
-					p Personal Independence Payment (PIP) is extra money to help you with everyday life if you’ve an illness, disability or mental health condition.
+	.fullwidth-content
+			h1 Personal Independence Payment (PIP)
+			p Personal Independence Payment (PIP) is extra money to help you with everyday life if you’ve an illness, disability or mental health condition.
 
-					p You can get it on top of Employment and Support Allowance or other benefits. Your income, savings, and whether you’re working or not don't affect your eligibility.
+			p You can get it on top of Employment and Support Allowance or other benefits. Your income, savings, and whether you’re working or not don’t affect your eligibility.
 
-					.group-index-list
-						h3 #[a(href="#") Benefit calculator]
-						p Find out what benefits and how much you could be entitled to
-					.group-index-list
-						h3 #[a(href="#") Personal Independence Payment (PIP)]
-					.group-index-list
-						h3 #[a(href="#") Employment Support Allowance (ESA)]
-					.group-index-list
-						h3 #[a(href="#") Benefits for people in work or looking for work]
-					.group-index-list
-						h3 #[a(href="#") Benefits for older people]
-					.group-index-list
-						h3 #[a(href="#") Universal Credit]
-					.group-index-list
-						h3 #[a(href="#") Children and young people]
-					.group-index-list
-						h3 #[a(href="#") Coming from abroad and claiming benefits]
-	
+	.fullwidth-content
+		.flex-container.flex-row
+			.col-md-8.col-sm-12
+				.contents-page__section
+					h2 Before you claim PIP
+					p #[a(href="#") Check if you’re eligible for PIP]
+					p #[a(href="#") PIP: presence, residence and length of condition rules]
+					p #[a(href="#") How much PIP you can get and for how long]
+					p #[a(href="#") Extra money and help PIP entitles you to]
+					p #[a(href="#") Moving from DLA to PIP]
 
-				div.col-sm-4.col-sm-12								
-					.blog-sidebar--updates(style="background-color:#c2bdde; height:100%;")
-						.card-banner-top
-							p(style="color:#57486b;") Find a specific benefit
-						.card-text
-							//img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
-							//p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
-							.dropdown
-								select#exampleSelect1
-									option Attendance Allowance
-									option 2
-									option 3
-									option 4
-									option 5
+				.contents-page__section
+					h2 Help with your PIP claim
+					p #[a(href="#") How to claim PIP]
+					p #[a(href="#") How to claim PIP if you have a terminal illness]
+					p #[a(href="#") Help filling in your PIP claim form]
+					p #[a(href="#") Getting evidence to support your PIP claim]
+					p #[a(href="#") Sending your PIP claim form]
+					p #[a(href="#") Preparing for your PIP assessment]
+					p #[a(href="#") Changes that affect your PIP]
 
-							button.btn.btn-secondary.right-button-icon Search 
+				.contents-page__section
+					h2 PIP appeals
+					p #[a(href="#") Challenging a PIP decision - mandatory reconsideration]
+					p #[a(href="#") Challenging a PIP decision - apply for a tribunal hearing]
+					p #[a(href="#") Challenging a PIP decision - the tribunal hearing]
+					p #[a(href="#") How the DWP makes a decision on PIP claims]
+				.contents-page__section
+					h2 PIP resources
+					p #[a(href="#") PIP resources for advisers]
+					p #[a(href="#") Letter to confirm the DWP has given you more time to send your PIP claim form]
+					p #[a(href="#") Letter to send evidence after your PIP claim form]
 
+			.col-md-4.col-sm-12
+				div.blog-sidebar--updates(style="background-color:#a6d6ae; height:100%;")
+					.card-banner-top
+						p(style="color:#57486b;") Help others
+					.card-text
+						img(src="../../images/sample-blog/mugs-purple.svg" alt="volunteer" style="width:80%;")
+						p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
+						fieldset
+							label(for="standardField", style="color:#57486b;") Search your area
+							input#standardField(placeholder="", type="text")
 
-						//.blog-sidebar--updates(style="background-color:#006278; height:100%;")
-							.card-banner-top
-								p(style="color:#fff;") Resources for advisers
-							.card-text
-								p(style="color:#333;") Join one of over 300 local Citizens Advice, get training and help people.
-								fieldset
-									label(for="standardField", style="color:#57486b;") Search your area
-									input#standardField(placeholder="", type="text")
-
-								button.btn.btn-secondary.right-button-icon Search roles
-
-						//.blog-lead
-							.blog-name
-								p Issues affecting people
-						//.data-display
-							p.data-display-intro Benefits
-							h3 52%
-							p of ESA applicants were wrongly placed in mandatory consideration in 2015
-							p #[a(href="#") Read more about our research ]		
-
-					.callout--related
-						h3 If you need more help
-						p Contact the Citizens Advice consumer helpline on 03454 04 05 06 if you need more help - a trained adviser can give you advice over the phone. You can also use an online form or write to them.
-						p If you’re in Northern Ireland, contact Consumerline.
-
-	.fullwidth-yellow
-		.fullwidth-content
-			.flex-container.flex-row
-				.col-sm-6.col-xs-12
-					h2 Volunteer locally with us
-
-					h3 Interested in volunteering with Citizens Advice?
-
-					p Search for local opportunities, including trustee roles, fill out a quick online form and your local Citizens Advice will get in touch with you to discuss options.
-
-				.col-sm-6.col-xs-12
-					h3 Do you have good listening skills?
-
-					p Perhaps you'd be interested in being a telephone assessor for our national phone service.
-
-					h3 Interested in supporting witnesses in courts?
-
-					p Volunteer for our #[a Witness Service]?
-
-				.col-xs-12
-					fieldset
-						label(for="field") Search opportunities
-						.field-group.field-group--buttons
-							input#field(type="search")
-							button.btn Search
-
-	.fullwidth-blue
-		.fullwidth-content
-			.flex-container.flex-row
-				.col-sm-8.col-xs-12
-					h2 Why volunteer with us?
-
-					p Hear from our volunteers
-					p(style="position: relative;padding-bottom: 56.25%; padding-top: 25px;height: 0;")
-						iframe(src="https://www.youtube.com/embed/jtLJKyNLV_E", frameborder="0", allowfullscreen, style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;")
-
-					p #[a More from our volunteer stars]
-
-					h2 Disabled volunteers
-
-					p We offer a warm welcome to every volunteer whatever their background.
-
-					p #[a Find out what you can expect from us as a disabled volunteer]
-
-					h2 About volunteering with Citizens Advice
-
-					p Find out about:
-
-					ul
-						li #[a our volunteer roles]
-						li #[a being a trustee]
-						li #[a being a telephone assessor]
-						li #[a being a Witness Service volunteer]
-
-					p We also have some #[a answers to common questions] on volunteering with us.
-
-					Read our report about the #[a value of volunteering] to individuals, communities and society.
+						button.btn.btn-secondary.right-button-icon Search roles
