--- a/libs/jade/dev/post-tool-3/post-tool-4.jade
+++ b/libs/jade/dev/post-tool-3/post-tool-4.jade
@@ -28,5 +28,5 @@ block content
 			p This will remove you from a list called the ‘open register’, which is sold to companies that send out junk mail. You’ll get less junk mail once you’ve sent the letter and the electoral office has taken you off the list.
 			p It won’t affect your right to vote.
 
-			a.btn-light.left-button-icon(href="post-tool-3.html") Edit details
+			a.btn-light.left-button-icon(href="post-tool-3.html") Back
 			a.btn-secondary.email-button-icon(href="post-tool-5.html") Send emails and finish
