--- a/libs/template/mixins.jade
+++ b/libs/template/mixins.jade
@@ -1,5 +1,5 @@
-mixin link(title, href, text)
-	a(href=href ? href : '#', title!= title ? title : text)&attributes(attributes)!= text ? text : title
+mixin link(title, href, text, css)
+	a(class=css, href=href ? href : '#', title!= title ? title : text)&attributes(attributes)!= text ? text : title
 
 mixin breadcrumbs(obj)
 	.main-breadcrumb__content
@@ -23,4 +23,4 @@ mixin sidebar(obj, key)
 				ul
 					- each item,index in obj
 						li
-							+link(item.title, item.href, item.text)
+							+link(item.title, item.href, item.text, item.css)
