fix: Fixed adviser only sidebar active style

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -59,7 +59,7 @@ span[id*="overlay_button"] {
         //float: right;
         font-size: .8em;
     }
-    &.-current:before {
+    &.active:before {
         background-color: @inventive-teal;
         border-color: @inventive-teal;
         color: @white;
@@ -67,7 +67,7 @@ span[id*="overlay_button"] {
     &:hover:before {
         background-color: @white;
     }
-    &.-current:hover:before {
+    &.active:hover:before {
         background-color: @inventive-teal;
         color: @white;
     }
