--- a/libs/template/sidebar-adviser.jade
+++ b/libs/template/sidebar-adviser.jade
@@ -1,8 +1,8 @@
 - var section = "Sick pay"
 +sidebar([
-	{href: "#", title: "Check if you're entitled to sick pay"},
-	{href: "#", title: "How to get sick pay"},
-	{href: "#", title: "Getting money when you're off work sick"},
-	{href: "#", title: "Getting sick pay when you're pregnant"},
-    {href: "#", title: "Contractual sick pay"}
+	{href: "entitles-to-sick-pay.html", title: "Check if you're entitled to sick pay"},
+	{href: "how-to-get-sick-pay.html", title: "How to get sick pay"},
+	{href: "off-work-sick.html", title: "Getting money when you're off work sick"},
+	{href: "sick-pay-when-youre-pregnant.html", title: "Getting sick pay when you're pregnant"},
+    {href: "contractual-sick-pay.html", title: "Contractual sick pay", css: "adviser-only"}
 ])
