--- a/libs/jade/dev/adviser-2/sick-pay-when-youre-pregnant.jade
+++ b/libs/jade/dev/adviser-2/sick-pay-when-youre-pregnant.jade
@@ -19,7 +19,9 @@ block sidebar
 
 block content
 	p If you get Statutory Sick Pay (SSP) while you’re pregnant, different rules might apply depending if your illness is related to your pregnancy or not.
-	h2.h-getting-sick-pay-can-affect-maternity-pay Getting sick pay can affect maternity pay
+	h2.ref-heading
+		span.ref-heading__heading Getting sick pay can affect maternity pay
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p Your maternity pay might be affected if you're off sick while you're pregnant and your pay is less than usual.
 	p This is because your first 6 weeks of maternity pay is 90% of your average pay during an 8 week ‘qualifying period’. This qualifying period takes place while you're pregnant.
 	p Example
@@ -27,7 +29,9 @@ block content
 		p You work during the whole 8-week maternity pay qualifying period and receive your usual pay of £200 per week. This means your first 6 weeks of maternity pay will be £180 per week.
 		p However, if you're off sick for 2 weeks during your maternity pay qualifying period, your normal pay of £200 per week drops to £88.45 per week (the amount for statutory sick pay). This means your first 6 weeks of maternity pay will drop from £180 per week to £154.91 per week, because you'd claimed sick pay.
 
-	h2.h-off-work-sick-because-of-your-pregnancy Off work sick because of your pregnancy
+	h2.ref-heading
+		span.ref-heading__heading Off work sick because of your pregnancy
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If you're ill because of your pregnancy you can claim:
 	ul
 		li #[a(href="/development/workplace-rights/sick-pay/check-if-youre-entitled-to-sick-pay/") sick pay] until 4 weeks before your baby is due
@@ -39,7 +43,10 @@ block content
 	p You can’t be dismissed for having time off sick because of your pregnancy as you’re protected against #[a(href="/discrimination/what-are-the-different-types-of-discrimination/pregnancy-and-maternity-discrimination/") discrimination while you’re pregnant].
 	p You also have other #[a(href="/work/rights-at-work/parental-rights/parental-rights-at-work/") rights while you’re pregnant], for example time off for ante-natal appointments.
 	p You can read more about #[a.a-external(href="http://www.maternityaction.org.uk/advice-2/mums-dads-scenarios/pregnant/sickness-during-pregnancy-and-maternity-leave/", rel="external") sickness during pregnancy and maternity leave] on the Maternity Action website.
-	h2.h-sickness-not-related-to-your-pregnancy Sickness not related to your pregnancy
+
+	h2.ref-heading
+		span.ref-heading__heading Sickness not related to your pregnancy
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If you’re sick and it’s got nothing to do with being pregnant, for example you have the flu or a stomach bug, you can claim any sick pay you’re entitled to as usual, until either:
 	ul
 		li the week the baby is due
@@ -47,7 +54,10 @@ block content
 
 	p Then you’ll start getting any maternity pay you’re entitled to.
 	p You should be treated the same as anyone else who is off work sick. If you think you're being treated differently because you're pregnant contact #[a(href="/about-us/how-we-provide-advice/") your local Citizens Advice] for help.
-	h2.h-problems-getting-sick-pay Problems getting sick pay
+
+	h2.ref-heading
+		span.ref-heading__heading Problems getting sick pay
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p There are things you can do if you have any problems getting sick pay. If your employer:
 	ul
 		li says you can’t get it - #[a(href="/development/workplace-rights/sick-pay/check-if-youre-entitled-to-sick-pay/") check you’re entitled to get sick pay]
@@ -58,10 +68,14 @@ block content
 
 
 	.callout--adviser
-		h2.h-when-your-client-has-given-birth-recently When your client has given birth recently
+		h2.ref-heading
+			span.ref-heading__heading When your client has given birth recently
+			span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 		p When your client can get SSP depends on whether she's entitled to statutory maternity pay (SMP) or Maternity Allowance (MA). (You might hear this referred to as the 'disqualifying period').
 		section.revealable
-			h3 If your client gets maternity pay
+			h3.ref-heading
+				span.ref-heading__heading If your client gets maternity pay
+				span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 			p Your client can't get statutory sick pay while she's getting statutory maternity pay or Maternity Allowance.
 			p If she's sick before or during her 39 weeks of maternity pay, she can't get sick pay until whichever is later out of:
 			ul
@@ -76,7 +90,9 @@ block content
 				p If she phones in during the last week of her maternity pay and says she won't be able to return to work because she's sick, she won't get SSP for at least 8 weeks.
 
 		section.revealable
-			h3 If your client can't get maternity pay
+			h3.ref-heading
+				span.ref-heading__heading If your client can't get maternity pay
+				span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 			p Unless she's already getting SSP, your client isn't entitled to SSP until 18 weeks after the earlier of:
 			ul
 				li the start of the week the baby is born
