fix: Changed revealables to AN
Removed the revealables from the AO callout and styles them in their own AO style

--- a/libs/jade/dev/adviser-2/sick-pay-when-youre-pregnant.jade
+++ b/libs/jade/dev/adviser-2/sick-pay-when-youre-pregnant.jade
@@ -72,31 +72,28 @@ block content
 			span.ref-heading__heading When your client has given birth recently
 			span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 		p When your client can get SSP depends on whether she's entitled to statutory maternity pay (SMP) or Maternity Allowance (MA). (You might hear this referred to as the 'disqualifying period').
-		section.revealable
-			h3.ref-heading
-				span.ref-heading__heading If your client gets maternity pay
-				span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
-			p Your client can't get statutory sick pay while she's getting statutory maternity pay or Maternity Allowance.
-			p If she's sick before or during her 39 weeks of maternity pay, she can't get sick pay until whichever is later out of:
-			ul
-				li 8 weeks after her maternity pay ends
-				li 8 weeks after her sickness ends
 
-			p This means your client could lose out on sick pay if she calls in sick before she's due to return to work.
-			p If she's sick after her 39 weeks of maternity pay, the normal rules for sick pay apply.
-			.callout--quote
-				p <strong>Example</strong>
-				p If Alice phones in sick on the day she's due to start work after her maternity pay ends, she could get SSP if she meets the other conditions.
-				p If she phones in during the last week of her maternity pay and says she won't be able to return to work because she's sick, she won't get SSP for at least 8 weeks.
+	section.revealable.revealable--adviser
+		h3 If your client gets maternity pay
+		p Your client can't get statutory sick pay while she's getting statutory maternity pay or Maternity Allowance.
+		p If she's sick before or during her 39 weeks of maternity pay, she can't get sick pay until whichever is later out of:
+		ul
+			li 8 weeks after her maternity pay ends
+			li 8 weeks after her sickness ends
 
-		section.revealable
-			h3.ref-heading
-				span.ref-heading__heading If your client can't get maternity pay
-				span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
-			p Unless she's already getting SSP, your client isn't entitled to SSP until 18 weeks after the earlier of:
-			ul
-				li the start of the week the baby is born
-				li the start of the 4th week before the baby’s due, if your client is off sick because of the pregnancy
+		p This means your client could lose out on sick pay if she calls in sick before she's due to return to work.
+		p If she's sick after her 39 weeks of maternity pay, the normal rules for sick pay apply.
+		.callout--quote
+			p <strong>Example</strong>
+			p If Alice phones in sick on the day she's due to start work after her maternity pay ends, she could get SSP if she meets the other conditions.
+			p If she phones in during the last week of her maternity pay and says she won't be able to return to work because she's sick, she won't get SSP for at least 8 weeks.
 
-			p Your client should get form SSP1 from her employer and claim benefits from the Jobcentre.
-			p You can #[a(href="/benefits/benefits-introduction/what-benefits-can-i-get/benefit-checker/") use the benefits checker] to see what she might be entitled to.
+	section.revealable.revealable--adviser
+		h3 If your client can't get maternity pay
+		p Unless she's already getting SSP, your client isn't entitled to SSP until 18 weeks after the earlier of:
+		ul
+			li the start of the week the baby is born
+			li the start of the 4th week before the baby’s due, if your client is off sick because of the pregnancy
+
+		p Your client should get form SSP1 from her employer and claim benefits from the Jobcentre.
+		p You can #[a(href="/benefits/benefits-introduction/what-benefits-can-i-get/benefit-checker/") use the benefits checker] to see what she might be entitled to.
