change: Added 'add reference'

--- a/libs/jade/dev/adviser-2/how-to-get-sick-pay.jade
+++ b/libs/jade/dev/adviser-2/how-to-get-sick-pay.jade
@@ -23,7 +23,7 @@ block content
 	ul
 		li when to tell them you’re sick
 		li what information to give them about your illness
-	
+
 	p If they haven’t told you, make sure you ask them what to do or check your staff handbook.
 
 	p You should always follow their rules as you’ll be breaking your contract if you don’t. You can still get the statutory #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/") sick pay you’re entitled to], but you might not get extra contractual sick pay and could eventually lose your job.
@@ -31,7 +31,9 @@ block content
 	.callout--adviser
 		p This page mostly covers statutory sick pay. #[a(href="https://www.citizensadvice.org.uk/development/workplace-rights/adviser-sick-pay-to-test/adviser-contractual-sick-pay/") Get more detail on contractual sick pay].
 
-	h2 How to get statutory sick pay
+	h2.ref-heading
+		span.ref-heading__heading How to get statutory sick pay
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If your employer hasn’t told you what to do to get statutory sick pay (SSP), you should:
 	ol
 		li Tell your employer straight away that you’re sick and can’t work.
@@ -39,7 +41,9 @@ block content
 		li Confirm your illness in writing if your employer asks for it (this is called ‘self-certification’). You’ll need to do this within 7 days of telling your employer you’re sick.
 		li Get a doctor’s note if you’re sick for longer than 7 days, and your employer asks you to get one. The 7 days includes days you wouldn’t normally be working.
 
-	h3 What your employer can’t ask you to do
+	h3.ref-heading
+		span.ref-heading__heading What your employer can’t ask you to do
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If you’re entitled to SSP, and your contract doesn’t have any extra rules about contractual sick pay, your employer isn’t allowed to:
 	ul
 		li demand that you tell them you’re sick by a certain time of day
@@ -49,7 +53,9 @@ block content
 		li refuse to let someone else tell them you’re sick, for example if you’re too ill to get in touch yourself
 	p If your employer refuses to pay your SSP because of any of these reasons, you can #[a(href="https://www.citizensadvice.org.uk/work/rights-at-work/pay/problems-getting-paid/") take steps to get paid]. #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") Contact your nearest Citizens Advice] for help.
 
-	h2 Getting a note from your doctor
+	h2.ref-heading
+		span.ref-heading__heading Getting a note from your doctor
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If you’re sick for more than 7 days you’ll probably have to get a note from your doctor. You might hear these referred to as ‘fit notes’ (they used to be called ‘sick notes’).
 
 	p On the note, your doctor will say that you:
@@ -63,17 +69,23 @@ block content
 		p If you’re off work sick because of a disability, your employer has a legal duty to make ‘#[a(href="https://www.citizensadvice.org.uk/discrimination/what-are-the-different-types-of-discrimination/duty-to-make-reasonable-adjustments-for-disabled-people/") reasonable adjustments]’ to help you return to work.
 		p If you’re not sure your condition is classed as a disability, you can get help from #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") your nearest Citizens Advice].
 	.callout--adviser
-		h3 If an employer doubts your client’s incapacity to work
+		h3.ref-heading
+			span.ref-heading__heading If an employer doubts your client’s incapacity to work
+			span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 		p If an employer has doubts about your client’s incapacity for work, they can contact Medical Services via HMRC for help.
 		p GOV.UK has detailed guidance about fit notes and what happens if an employer asks for #[a(href="https://www.gov.uk/guidance/statutory-sick-pay-employee-fitness-to-work") medical advice through HMRC].
 
-	h2 Returning to work
+	h2.ref-heading
+		span.ref-heading__heading Returning to work
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 
 	p If you want to return to work early, your employer might ask you to get a note from your doctor confirming you’re fit for work. This will usually be because your employer needs it for their insurance.
 
 	p Your doctor can recommend that you work less hours or days for a bit, and gradually increase them back to normal - this is called a ‘phased return’. This could affect your pay so you need to discuss it with your employer.
 
-	h3 Doing ’lighter work’
+	h3.ref-heading
+		span.ref-heading__heading Doing ’lighter work’
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 
 	p Your employer might offer to let you do lighter duties than usual until you’re properly well again.
 	p You’re allowed to say no if you don’t want to do it  - your employer still has to pay statutory sick pay you’re entitled to.
@@ -81,7 +93,9 @@ block content
 	p Contact #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/") your nearest Citizens Advice] if you want help working out what your options are.
 
 	.callout--adviser
-		h3 Planning a phased return to work
+		h3.ref-heading
+			span.ref-heading__heading Planning a phased return to work
+			span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 		p Before agreeing a phased return to work, make sure the client doesn’t lose out on money.
 		p For days the client works, they’re entitled to their normal pay.
 		p For days they’re off they might still be entitled to either:
@@ -100,6 +114,8 @@ block content
 			p In her 3rd week back she doesn’t get SSP for the Monday as she hasn’t been sick for 4 days in a row - just Saturday, Sunday, and Monday.
 			p She gets her normal pay for working on Tuesday to Friday.
 			p When she returns to work full time she gets her normal full pay.
-	h2 How you’re paid sick pay
+	h2.ref-heading
+		span.ref-heading__heading How you’re paid sick pay
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p You’re usually paid statutory and contractual sick pay in the same way as your normal wages - for example weekly into your bank account. You’ll pay tax and National Insurance on your sick pay.
-	p As well as sick pay, you might be able to #[a(href="https://www.citizensadvice.org.uk/development/workplace-rights/sick-pay/money-when-sick/") get other money while you’re off work]. 
+	p As well as sick pay, you might be able to #[a(href="https://www.citizensadvice.org.uk/development/workplace-rights/sick-pay/money-when-sick/") get other money while you’re off work].
