change: Added 'add reference'

--- a/libs/jade/dev/adviser-2/entitled-to-sick-pay.jade
+++ b/libs/jade/dev/adviser-2/entitled-to-sick-pay.jade
@@ -22,7 +22,7 @@ block content
 
 	.callout--adviser
 		p This page mostly covers statutory sick pay. #[a(href="/Views/Pages/Beta/BetaContentPageTemplate.aspx?id=58507") Get more detail on contractual sick pay].
-	
+
 	p Not all employers offer contractual sick pay, but there’s also statutory sick pay (SSP). All employers have to give you this, by law, as long as you:
 	ul
 		li have done at least one day’s work for your employer
@@ -50,7 +50,7 @@ block content
 		p For any full week your client has off work they will get the full weekly rate of £88.45, even if they work part-time.
 		p They will get a daily rate of SSP for the first and last weeks of their sickness if they’re not full weeks.
 		p You can use the #[a(href="https://www.gov.uk/calculate-statutory-sick-pay") statutory sick pay calculator] on GOV.UK to work out exactly what they’ll get, or #[a(href="https://www.gov.uk/guidance/statutory-sick-pay-manually-calculate-your-employees-payments") work it out manually] using guidance on GOV.UK.
-	
+
 	section.revealable.revealable--adviser
 		h3 How long statutory sick pay is paid for
 		p SSP is paid for up to 28 weeks. This can be either:
@@ -76,19 +76,21 @@ block content
 		ul
 			li are self-employed
 			li have already had SSP for 28 weeks
-			li are getting statutory maternity pay or Maternity Allowance 
+			li are getting statutory maternity pay or Maternity Allowance
 			li are pregnant and your baby is due in 4 weeks or less
-			li had a baby in the last 14 weeks (or the last 18 weeks if your baby was born over 4 weeks early) 
+			li had a baby in the last 14 weeks (or the last 18 weeks if your baby was born over 4 weeks early)
 			li are an agricultural worker (#[a(href="https://www.gov.uk/agricultural-sick-pay") read about agricultural sick pay on GOV.UK])
 			li are in the armed forces
 
 	.callout--alert
 		p Even if your employer says you're '#[a(href="https://www.gov.uk/employment-status/selfemployed-contractor") self-employed]', you might in fact be a '#[a(href="https://www.gov.uk/employment-status/selfemployed-contractor") worker]' and entitled to sick pay. It’s always best to check if this applies to you - contact #[a(href="#") your nearest Citizens Advice] if you’re not sure.
-	
-	h2 When you have more than one employer
+
+	h2.ref-heading
+		span.ref-heading__heading When you have more than one employer
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If you have more than one employer you could be entitled to sick pay from each one. For each employer, the rules are the same as if they were your only employer.
 	p If your illness means you can do one of your jobs, but not the other, you could get sick pay from one while getting your normal wages from another.
-	
+
 	h2 If your employer refuses to pay your sick pay
 	p If you’re not getting the pay your contract says you’re entitled to, you can #[a(href="#") take steps to get the money you’re owed].
 	p If you’re entitled to statutory pay but your employer refuses to pay it, you should contact HM Revenue and Customs (HMRC).
@@ -101,18 +103,24 @@ block content
 		| Open Monday to Friday, 8am to 5pm.
 	p Calls can cost up to 12p a minute from landlines, and between 3p and 45p a minute from mobiles.
 	p If you need more help at any stage, #[a(href="#") contact your nearest Citizens Advice]
-	
-	h2 What to do if you’re not entitled to sick pay
+
+	h2.ref-heading
+		span.ref-heading__heading What to do if you’re not entitled to sick pay
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If your employer says you’re not entitled to sick pay, ask them to give you a written explanation of their reasons. They should give you this on a form called #[a(href="#") Statutory sick pay and an employee’s claim for benefit (SSP1)]. They should give you this within 7 days of you going off sick.
 
 	p You’ll need the SSP1 form to claim benefits. If you can’t get sick pay, you might be able to claim #[a(href="#") Employment and Support Allowance] and other benefits. #[a(href="#") Use our benefits checker] to see what you might be entitled to.
 
 	p If your employer doesn’t give you form SSP1 there are 2 steps to take:
 
-	h3 Step 1: request a written statement
+	h3.ref-heading
+		span.ref-heading__heading Step 1: request a written statement
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If your employer hasn’t given you form SSP1, ask them for a written statement explaining why you can’t get Statutory Sick Pay. You could also give them #[a(href="#") a copy of the form] to fill in.
 
-	h3 Step 2: contact HMRC
+	h3.ref-heading
+		span.ref-heading__heading Step 2: contact HMRC
+		span.ref-heading__toggle.ref-heading__toggle--off #[a.js-toggle-ref Add reference]
 	p If you can’t get form SSP1 or a written statement from your employer, contact HMRC’s employees' enquiry line on 0300 200 3500. They’ll ask your employer why they think you’re not entitled to SSP.
 
 	section.revealable.revealable--adviser
@@ -153,8 +161,8 @@ block content
 			li they're in their #[a(href="/Views/Pages/LegacyAdviceTemplatePage.aspx?id=26798#h-sickness-and-notice") statutory notice period] because they’re leaving their job
 			li their notice period is the statutory minimum (or less)
 			li they haven't resigned
-		
-		p This applies no matter what sick pay terms are specified in your client's contract. 
+
+		p This applies no matter what sick pay terms are specified in your client's contract.
 
 	section.revealable.revealable--adviser
 		h3 If your client is involved in a trade dispute
@@ -163,7 +171,7 @@ block content
 		ul
 			li the sickness started before the trade dispute began
 			li they’re laid off because of a trade dispute elsewhere (that they are not directly involved in)
-		
+
 	section.revealable.revealable--adviser
 		h3 If your client has 2 contracts with the same employer
 		p Depending on how their employer pays their national insurance (NI) contributions, if your client has 2 separate contracts with the same employer they will get:
