--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -47,6 +47,8 @@ html.no-js
 			.branding
 				.content
 					ul
+						li.icon-local
+							a(href="locator.html") Find a local Citizens Advice
 						li(href="#")
 							a Cymraeg
 						li(href="#")
