fix: Added float:left to the A in adviser revealables to stop them showing beside 'add reference'
Because 'add reference' function puts a span with float left around the title, the ::before A was sitting after the title. Adding float left to the ::before makes sure it floats left before the title floats left, if it floats left.

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -95,6 +95,7 @@ span[id*="overlay_button"] {
     .collapse-toggle:before,
     .revealable__heading:before {
         content: "A";
+        float: left;
         display: inline-block;
         background-color: @inventive-teal;
         color: @white;
